--- a/src/app.scss
+++ b/src/app.scss
@@ -2,9 +2,8 @@
 
 :root {
   line-height: 1.5;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+	font-family: Syne;
+	font-display: optional;
 }
 
 html,
